--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 </head>
 <body>
-<rapi-doc spec-url="openapi.yaml"></rapi-doc>
+<rapi-doc spec-url="https://raw.githubusercontent.com/mawoka-myblock/PersonalBlogEngine/master/openapi.yaml"></rapi-doc>
 </body>
 </html>
